Fix styling and spacing of carousel component

--- a/ncoover-website/src/components/portfolio/carousel/Carousel.module.css
+++ b/ncoover-website/src/components/portfolio/carousel/Carousel.module.css
@@ -1,3 +1,13 @@
+.controls {
+	display: flex;
+	background-color: cornflowerblue;
+	align-items: center;
+}
+
+.arrowControl {
+	height: 8rem;
+}
+
 .carousel {
 	display: flex;
 	flex-direction: column;
@@ -21,7 +31,7 @@
 	white-space: nowrap;
 	scroll-behavior: smooth;
 	padding: 1rem 0;
-	margin: 0;
+	margin: 0 1rem;
 	scrollbar-width: none;
 	scroll-snap-type: x mandatory;
 	scroll-behavior: smooth;
@@ -32,6 +42,6 @@
 }
 
 .cardSpacer {
-	min-width: 1rem;
+	min-width: 2rem; /* match witdh of project item*/
 	flex-shrink: 0;
 }
